services/k8s/base/livekit/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: livekit-system
    labels:
        name: livekit-system
